<resources>
    <string name="app_name">DoSoptTemplate</string>
    <string name="id_title">ID</string>
    <string name="sopt_title">Welcome to SOPT</string>
    <string name="id_hint">아이디를 입력해주세요</string>
    <string name="password_title">비밀번호</string>
    <string name="password_hint">비밀번호를 입력해주세요</string>
    <string name="sign_up_btn">회원가입하기</string>
    <string name="nickname_title">닉네임</string>
    <string name="mbti_title">MBTI</string>

    <!-- login -->
    <string name="login_login_btn">로그인하기</string>

    <!-- sign up-->
    <string name="sign_up_nickname_hint">닉네임을 입력해주세요</string>
    <string name="sign_up_mbti_hint">MBTI를 입력해주세요</string>
    <string name="sign_up_password_error">비밀번호는 영문,숫자,특수문자를 모두 포함한 6~12글자 이내입니다.</string>

    <!-- search -->
    <string name="search_content">Search 화면입니다</string>

    <!-- home -->
    <string name="menu_home">Home</string>
    <string name="menu_my_page">My Page</string>
    <string name="menu_do_android">DO ANDROID</string>
    <string name="menu_recommend">Recommend</string>
    <string name="menu_add_bookmark">북마크 설정</string>
    <string name="menu_remove_bookmark">북마크 해제</string>
</resources>