<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sopt_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/id_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title" />

    <EditText
        android:id="@+id/et_sign_up_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/id_hint"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up_id"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id" />

    <TextView
        android:id="@+id/tv_sign_up_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up_id"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_id" />

    <EditText
        android:id="@+id/et_sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="numberPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up_id"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_password" />

    <TextView
        android:id="@+id/tv_sign_up_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_nickname_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up_password"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_password" />

    <EditText
        android:id="@+id/et_sign_up_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/sign_up_nickname_hint"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up_nickname"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_nickname" />

    <TextView
        android:id="@+id/tv_sign_up_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_mbti_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up_nickname"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_nickname" />

    <EditText
        android:id="@+id/et_sign_up_mbti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/sign_up_mbti_hint"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up_mbti"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_mbti" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_up_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>